--- a/app/src/app/projects/rewriting-the-cosmos-kernel-in-rust/page.mdx
+++ b/app/src/app/projects/rewriting-the-cosmos-kernel-in-rust/page.mdx
@@ -1,6 +1,7 @@
-import { ArticleLayout } from '@/components/ArticleLayout'
+import { ProjectLayout } from '@/components/ProjectLayout'
 
-export const article = {
+
+export const project = {
   author: 'Adam Wathan',
   date: '2022-07-14',
   title: 'Rewriting the cosmOS kernel in Rust',
@@ -9,11 +10,11 @@ export const article = {
 }
 
 export const metadata = {
-  title: article.title,
-  description: article.description,
+  title: project.title,
+  description: project.description,
 }
 
-export default (props) => <ArticleLayout article={article} {...props} />
+export default (props) => <ProjectLayout project={project} {...props} />
 
 When we released the first version of cosmOS last year, it was written in Go. Go is a wonderful programming language with a lot of benefits, but it’s been a while since I’ve seen an article on the front page of Hacker News about rewriting some important tool in Go and I see articles on there about rewriting things in Rust every single week.
 
