--- a/src/app/projects/dreams-built/page.mdx
+++ b/src/app/projects/dreams-built/page.mdx
@@ -1,17 +1,16 @@
 import { ProjectLayout } from '@/components/ProjectLayout'
 import featureImage from './feature.webp'
 
-
 export const project = {
-  id: 1,
-  title: 'Pilot Prep',
-  description: 'A comprehensive aviation training platform helping pilots prepare for their exams with advanced features and real-time progress tracking.',
+  id: 2,
+  title: 'Dreams Built',
+  description: 'A sophisticated platform connecting dreamers with resources to build their aspirations into reality.',
   image: featureImage,
-  slug: 'pilot-prep',
-  tags: [ 'Multi-tenant','Websockets', 'AWS', 'Docker', 'Prisma', 'MUX', 'Railway', 'React','Express','PostgreSQL'],
-  status: 'in-progress',
+  slug: 'dreams-built',
+  tags: ['React', 'TypeScript', 'PostgreSQL', 'Node.js', 'Express', 'Railway'],
+  status: 'completed',
   priority: 'high',
-  date: '2024-01-15',
+  completedDate: '2024-01-01',
 }
 
 export const metadata = {
