--- a/src/app/projects/grace-and-aroha/page.mdx
+++ b/src/app/projects/grace-and-aroha/page.mdx
@@ -1,17 +1,16 @@
 import { ProjectLayout } from '@/components/ProjectLayout'
 import featureImage from './feature.webp'
 
-
 export const project = {
-  id: 1,
-  title: 'Pilot Prep',
-  description: 'A comprehensive aviation training platform helping pilots prepare for their exams with advanced features and real-time progress tracking.',
+  id: 3,
+  title: 'Grace & Aroha',
+  description: 'A heartfelt website showcasing New Zealand culture and values with beautiful design and storytelling.',
   image: featureImage,
-  slug: 'pilot-prep',
-  tags: [ 'Multi-tenant','Websockets', 'AWS', 'Docker', 'Prisma', 'MUX', 'Railway', 'React','Express','PostgreSQL'],
-  status: 'in-progress',
-  priority: 'high',
-  date: '2024-01-15',
+  slug: 'grace-and-aroha',
+  tags: ['Next.js', 'Strapi', 'TypeScript', 'PostgreSQL', 'Node.js', 'Express', 'Railway'],
+  status: 'completed',
+  priority: 'low',
+  completedDate: '2021-06-01',
 }
 
 export const metadata = {
