--- a/src/app/education/waikato-aviation/page.mdx
+++ b/src/app/education/waikato-aviation/page.mdx
@@ -13,9 +13,9 @@ export const education = {
   description: 'Professional pilot training programme covering theory of flight, navigation, meteorology, and aviation regulations leading to Commercial Pilot Licence.',
   achievements: [
     'Completed Commercial Pilot Licence (CPL)',
-    'Instrument Rating (IR) qualification',
-    'Flight Instructor Rating (FIR)',
-    'Accumulated 200+ flight hours',
+    'Multi-Engine Instrument Rating (MEIR) qualification',
+    'Flight Instructor Rating (FI)',
+    'Accumulated 250+ flight hours',
     'Aviation English Language Proficiency Level 6'
   ]
 }
@@ -28,3 +28,5 @@ export const metadata = {
 export default (props) => <ProjectLayout project={education} {...props} />
 
 Coming soon...
+
+Visit <a href="https://waikatoaviation.co.nz" target="_blank" rel="noopener noreferrer">Waikato Aviation website</a>.
