--- a/src/app/projects/pilot-prep/page.mdx
+++ b/src/app/projects/pilot-prep/page.mdx
@@ -5,10 +5,10 @@ import featureImage from './feature.webp'
 export const project = {
   id: 1,
   title: 'Pilot Prep',
-  description: 'A comprehensive aviation training platform helping pilots prepare for their exams with advanced features and real-time progress tracking.',
+  description: 'An advanced aviation training platform featuring interactive courses with custom markdown directives, AI-powered learning assistance, comprehensive assessments with detailed progress reporting, and sophisticated testing capabilities. Includes real-time forums, advanced note-taking, and optimised content delivery through AWS CloudFront.',
   image: featureImage,
   slug: 'pilot-prep',
-  tags: [ 'Multi-tenant','Websockets', 'AWS', 'Docker', 'Prisma', 'MUX', 'Railway', 'React','Express','PostgreSQL'],
+  tags: ['Multi-tenant', 'AI Integration', 'Custom Markdown', 'Websockets', 'AWS CloudFront', 'Redis Caching', 'Interactive Learning', 'Progress Tracking', 'Real-time Chat'],
   status: 'in-progress',
   priority: 'high',
   date: '2024-01-15',
@@ -21,75 +21,10 @@ export const metadata = {
 
 export default (props) => <ProjectLayout project={project} {...props} />
 
-Most companies try to stay ahead of the curve when it comes to visual design, but for Planetaria we needed to create a brand that would still inspire us 100 years from now when humanity has spread across our entire solar system.
+Coming soon...
 
 <Image src={featureImage} alt="Pilot Prep feature image" />
 
-I knew that to get it right I was going to have to replicate the viewing conditions of someone from the future, so I grabbed my space helmet from the closet, created a new Figma document, and got to work.
+Visit the <a href="https://pilotprep.co.nz" target="_blank" rel="noopener noreferrer">Pilot Prep website</a> to see the live site.
 
-## Sermone fata
-
-Lorem markdownum, bracchia in redibam! Terque unda puppi nec, linguae posterior
-in utraque respicere candidus Mimasque formae; quae conantem cervice. Parcite
-variatus, redolentia adeunt. Tyrioque dies, naufraga sua adit partibus celanda
-torquere temptata, erit maneat et ramos, [iam](#) ait dominari
-potitus! Tibi litora matremque fumantia condi radicibus opusque.
-
-Deus feram verumque, fecit, ira tamen, terras per alienae victum. Mutantur
-levitate quas ubi arcum ripas oculos abest. Adest [commissaque
-victae](#) in gemitus nectareis ire diva
-dotibus ora, et findi huic invenit; fatis? Fractaque dare superinposita
-nimiumque simulatoremque sanguine, at voce aestibus diu! Quid veterum hausit tu
-nil utinam paternos ima, commentaque.
-
-```c
-exbibyte_wins = gigahertz(3);
-grayscaleUtilityClient = control_uat;
-pcmciaHibernate = oop_virus_console(text_mountain);
-if (stateWaisFirewire >= -2) {
-    jfs = 647065 / ldapVrml(tutorialRestore, 85);
-    metal_runtime_parse = roomComputingResolution - toolbarUpload +
-            ipx_nvram_open;
-} else {
-    maximizeSidebar *= suffix_url(flatbed + 2, requirements_encoding_node +
-            only_qbe_media, minicomputer);
-}
-```
-
-Aere repetiti cognataque natus. Habebat vela solutis saepe munus nondum adhuc
-oscula nomina pignora corpus deserat.
-
-## Lethaei Pindumve me quae dinumerat Pavor
-
-Idem se saxa fata pollentibus geminos; quos pedibus. Est urnis Herses omnes nec
-divite: et ille illa furit sim verbis Cyllenius.
-
-1. Captus inpleverunt collo
-2. Nec nam placebant
-3. Siquos vulgus
-4. Dictis carissime fugae
-5. A tacitos nulla viginti
-
-Ungues fistula annoso, ille addit linoque motatque uberior verso
-[rubuerunt](#) confine desuetaque. _Sanguine_ anteit
-emerguntque expugnacior est pennas iniqui ecce **haeret** genus: peiora imagine
-fossas Cephisos formosa! Refugitque amata [refelli](#)
-supplex. Summa brevis vetuere tenebas, hostes vetantis, suppressit, arreptum
-regna. Postquam conpescit iuvenis habet corpus, et erratica, perdere, tot mota
-ars talis.
-
-```c
-digital.webcam_dual_frequency = webmasterMms;
-if (5 + language_standalone_google) {
-    cc_inbox_layout *= file_character;
-    task += p;
-    lockUnicode += enterprise_monochrome(tokenFunctionPersonal, keyVirtual,
-            adf);
-}
-windows_binary_esports(87734, array(restoreRomTopology, adRaw(407314),
-        dongleBashThumbnail), interpreter);
-```
-
-Sit volat naturam; motu Cancri. Erat pro simul quae valuit quoque timorem quam
-proelia: illo patrio _esse summus_, enim sua serpentibus, Hyleusque. Est coniuge
-recuso; refert Coroniden ignotos manat, adfectu.
+*This project is still being actively developed and no courses are currently available to the public.*
