--- a/src/app/work/numberworks-n-words/page.mdx
+++ b/src/app/work/numberworks-n-words/page.mdx
@@ -9,7 +9,7 @@ export const work = {
   logo: logoNumberWorksNWords,
   startDate: '2022-05-09',
   url: 'https://numberworksnwords.com',
-  location: 'Auckland, New Zealand',
+  location: 'Auckland, New Zealand (Remote)',
   type: 'full-time',
   roles: [
     {
@@ -21,7 +21,7 @@ export const work = {
     {
       title: 'Software Engineer',
       startDate: '2023-06-01',
-      description: 'Led development of key platform features, mentored junior developers, and architected scalable solutions for multi-tenant educational applications serving thousands of students.'
+      description: 'Led development of key platform features, mentored junior developers, and architected scalable solutions for the NumberWorks\'nWords platform.'
     }
   ]
 }
@@ -34,3 +34,5 @@ export const metadata = {
 export default (props) => <ProjectLayout project={work} {...props} />
 
 Coming soon...
+
+Visit <a href="https://numberworksnwords.com" target="_blank" rel="noopener noreferrer">NumberWorks\'nWords website</a>.
