--- a/src/app/education/developers-institute/page.mdx
+++ b/src/app/education/developers-institute/page.mdx
@@ -15,7 +15,7 @@ export const education = {
     'Graduated with Distinction (top 10% of cohort)',
     'Built and deployed 5+ full-stack applications',
     'Completed industry placement with NumberWorks\'nWords',
-    'Specialised in React, Node.js, and PostgreSQL'
+    'Specialised in React, Node.js, Docker, and PostgreSQL'
   ]
 }
 
@@ -27,3 +27,5 @@ export const metadata = {
 export default (props) => <ProjectLayout project={education} {...props} />
 
 Coming soon...
+
+
