--- a/src/app/work/waikato-aviation/page.mdx
+++ b/src/app/work/waikato-aviation/page.mdx
@@ -14,8 +14,14 @@ export const work = {
   type: 'full-time',
   roles: [
     {
-      title: 'Flight Instructor',
+      title: 'Office Administrator',
       startDate: '2016-01-01',
+      endDate: '2016-10-01',
+      description: 'Provided administrative support, managed student records, and assisted with flight scheduling.'
+    },
+    {
+      title: 'Flight Instructor',
+      startDate: '2016-10-01',
       endDate: '2018-03-01',
       description: 'Provided flight instruction for private and commercial pilot licences. Conducted ground school lessons and flight safety briefings.'
     },
@@ -29,7 +35,7 @@ export const work = {
       title: 'Deputy Chief Flying Instructor',
       startDate: '2019-06-01',
       endDate: '2020-02-01',
-      description: 'Managed flight operations, ensured regulatory compliance, and oversaw training standards for the organisation. Led a team of 15+ flight instructors.'
+      description: 'Managed flight operations, ensured regulatory compliance, and oversaw training standards for the organisation. Led a team of 10+ flight instructors.'
     }
   ]
 }
@@ -42,3 +48,5 @@ export const metadata = {
 export default (props) => <ProjectLayout project={work} {...props} />
 
 Coming soon...
+
+Visit <a href="https://waikatoaviation.co.nz" target="_blank" rel="noopener noreferrer">Waikato Aviation website</a>.
